--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "eslint": "^7.14.0",
+        "eslint-plugin-vue": "^7.1.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "resolve-url-loader": "^3.1.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "view-design": "^4.4.0",
+        "vue": "^2.6.12",
+        "vue-router": "^3.4.9"
     }
 }
